# regime-aware-churn-predictor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
regime_aware_churn_predictor/: predictions.csv
regime_aware_churn_predictor/data/: data_dictionary.md
regime_aware_churn_predictor/data/processed/: holdout_features.csv  holdout_predictions_explained.csv  train_features.csv
regime_aware_churn_predictor/docs/: deployment_plan.md  features.md
regime_aware_churn_predictor/notebooks/: feature_engineering.ipynb  modeling.ipynb
